--- a/assets/css/pro.css
+++ b/assets/css/pro.css
@@ -1,5 +1,7 @@
 body {
   font-family: 'Arial', sans-serif;
+  background-color: #f8f9fa;
+  color: #333;
 }
 
 .navbar {
@@ -26,6 +28,7 @@ body {
   background-color: #343a40;
   color: #fff;
   padding: 60px 0;
+  margin-top: 30px;
 }
 
 .footer p {
@@ -36,32 +39,55 @@ body {
 /* 卡片样式 */
 .card {
   margin-bottom: 20px;
+  border: none;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
 }
 
+.card:hover {
+  transform: translateY(-10px);
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+}
 
 /* 商品卡片样式 */
 .card-title {
-  font-size: 1.25rem;
+  font-size: 1.5rem;
   font-weight: bold;
+  color: #007bff;
 }
 
 .card-text {
   font-size: 1rem;
+  color: #555;
 }
 
 .btn-primary {
   background-color: #007bff;
   border-color: #007bff;
+  transition: background-color 0.3s, border-color 0.3s;
 }
 
 .btn-primary:hover {
   background-color: #0056b3;
-  border-color: #0056b3;
+  border-color: #004494;
 }
 
 /* 确保产品图片大小一致 */
 .card-img-top.fixed-size {
   width: 100%;
-  height: 200px; /* 统一高度 */
+  height: 250px; /* 统一高度 */
   object-fit: cover; /* 图片填充方式 */
+}
+
+/* 主要标题样式 */
+h2 {
+  font-family: 'Georgia', serif;
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 40px;
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 2px;
 }
